examples/negative/type_name_collision/prelude_collision.prelude.kai
pub type Gadget[k] = GLeaf | GNode(k, Gadget[k], Gadget[k])

pub fn empty_gadget() : Gadget[Int] = GLeaf
